gen/24.2-beta/rpk/rpk-registry-mode-set.adoc
= rpk registry mode set
:description: rpk registry mode set

Set schema registry mode

Running this command with no subject sets the global schema registry mode, 
alternatively you can use the --global flag to set the global schema registry 
mode at the same time as per-subject mode.

Acceptable mode values: 
  - READONLY
  - READWRITE

== Usage

[,bash]
----
rpk registry mode set [SUBJECT...] [flags]

Examples:

Set the global schema registry mode to READONLY
  rpk registry mode set --mode READONLY

Set the schema registry mode to READWRITE in subjects foo and bar
  rpk registry mode set foo bar --mode READWRITE
----

== Flags

[cols="1m,1a,2a"]
|===
|*Value* |*Type* |*Description*

|--global |- |Set the global schema registry mode in addition to subject modes.

|-h, --help |- |Help for set.

|--mode |string |Schema registry mode to set. Supported values: READONLY, READWRITE (case insensitive).

|--config |string |Redpanda or rpk config file; default search paths are `/var/lib/redpanda/.config/rpk/rpk.yaml`, `$PWD/redpanda.yaml`, and `/etc/redpanda/redpanda.yaml`.

|-X, --config-opt |stringArray |Override rpk configuration settings; '-X help' for detail or '-X list' for terser detail.

|--format |string |Output format (json,yaml,text,wide,help) (default "text").

|--profile |string |rpk profile to use.

|-v, --verbose |- |Enable verbose logging.
|===